--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,16 @@ code {
   border-radius:19px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+
+.menu-option{
+  color:black;
+}
+
+@media screen and (max-width: 768px) {
+  .menu-option1{
+    color:black;
+    font-size: 20px;
+  }
+  
+}
