--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -9,7 +9,7 @@
 
     .container-width, .header-container {
         width: 100% !important;
-        padding: 0 20px !important;
+        padding: 0 10px !important;
     }
 
     .hero-section-container {
@@ -40,7 +40,12 @@
 
     .getintouch-img img, .getintouch-img {
         height: 100%;
-    }
+        border-radius: 19px;
+        -webkit-border-radius: 19px;
+        -moz-border-radius: 19px;
+        -ms-border-radius: 19px;
+        -o-border-radius: 19px;
+}
 
     .hero-section-img {
         display: none;
