--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -479,3 +479,45 @@ header {
     -o-border-radius: 5px !important;
     font-weight: 500 !important;
 }
+
+.services-popup {
+    position: fixed !important;
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    width: 50% ;
+    max-height: 90vh !important;
+    border-radius: 15px !important;
+    background-color: #fff;
+    -webkit-transform: translate(-50%, -50%) !important;
+    -moz-transform: translate(-50%, -50%) !important;
+    -ms-transform: translate(-50%, -50%) !important;
+    -o-transform: translate(-50%, -50%) !important;
+    -webkit-border-radius: 15px !important;
+    -moz-border-radius: 15px !important;
+    -ms-border-radius: 15px !important;
+    -o-border-radius: 15px !important;
+}
+
+.offcanvas-header {
+    border-bottom: 1px solid #aeaeae !important;
+}
+
+.services-popup-footer {
+    border-top: 1px solid #aeaeae !important;
+}
+
+
+
+.one-time-color {
+    background-color: rgb(208, 232, 221);
+    ;
+}
+
+.renewal-color {
+    background-color: rgb(206, 244, 252);
+}
+
+.misc-color {
+    background-color: rgb(248, 215, 219);
+}
