--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -150,7 +150,7 @@ header {
     align-items: center;
 }
 
-.aboutus-section-info h4, .testimonial-section h4, .faq-txt-section h4 {
+.aboutus-section-info h4, .testimonial-section h4, .faq-txt-section h4, .services-section h1 {
     color: #2CB665;
     font-size: 24px;
     font-weight: 600;
@@ -171,7 +171,6 @@ header {
 }
 
 .services-card {
-    border: 1px solid #D6D6D6;
     padding: 30px 11px 11px 30px;
     background-color: #ffff;
     height: 200px;
@@ -181,6 +180,11 @@ header {
     -ms-border-radius: 0 25px 25px 25px;
     -o-border-radius: 0 25px 25px 25px;
     position: relative;
+}
+.accordion-body{
+    font-size: 14px;
+    color: #656565 !important;
+    border-left: 3px solid #2CB665;
 }
 
 .service-card-header, .repeated-service-card-header {
@@ -485,7 +489,7 @@ header {
     top: 50% !important;
     left: 50% !important;
     transform: translate(-50%, -50%) !important;
-    width: 50% ;
+    width: 50%;
     max-height: 90vh !important;
     border-radius: 15px !important;
     background-color: #fff;
@@ -520,4 +524,8 @@ header {
 
 .misc-color {
     background-color: rgb(248, 215, 219);
+}
+.footer-container{
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
