--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,8 @@
 .primary-btn {
   background-color: #2CB665 !important;
-  font-size: 15px;
-  font-weight: 500;
+  font-weight: 500 !important;
+  padding: 8px 20px !important;
+  font-size: 17px !important;
 }
 
 .primary-btn:hover:not(.btn:disabled) {
