--- a/src/index.css
+++ b/src/index.css
@@ -43,16 +43,16 @@ code {
 }
 
 .menu-option{
-  font-size: 15px;
+  font-size: 16px;
 }
 
-
+/* 
 .aboutus-img img{
   width: 580px;
   height: 480px;
   border-radius:19px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
+} */
 
 
 .menu-option{
